It isnt that easy to become a dev.
- Also customise the message while we are at it..

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,13 +31,13 @@
     <string name="device_info_default">Unknown</string>
     <!-- [CHAR LIMIT=NONE] Device Info screen. Countdown for user taps to enable development settings -->
     <plurals name="show_dev_countdown">
-        <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from being a developer.</item>
-        <item quantity="other">You are now <xliff:g id="step_count">%1$d</xliff:g> steps away from being a developer.</item>
+        <item quantity="one">Tanjiro hears a rumble! <xliff:g id="step_count">%1$d</xliff:g> What could it be?</item>
+        <item quantity="other">It\'s a demon! You are <xliff:g id="step_count">%1$d</xliff:g> steps away from defeating it.</item>
     </plurals>
     <!-- [CHAR LIMIT=NONE] Device Info screen. Confirmation that developer settings are enabled -->
-    <string name="show_dev_on">You are now a developer!</string>
+    <string name="show_dev_on">You have defeated it! As a reward you get access to developer settings. </string>
     <!-- [CHAR LIMIT=NONE] Device Info screen. Okay we get it, stop pressing, you already have it on -->
-    <string name="show_dev_already">No need, you are already a developer.</string>
+    <string name="show_dev_already">No need, you are already a demon slayer.</string>
 
     <!-- [CHAR LIMIT=NONE] Toast message when user attemps to launch developer otions before enabling it. -->
     <string name="dev_settings_disabled_warning">Please enable developer options first.</string>
